      based on \command{gcc} 12 and newer version of MinGW-W64, binutils and
      libraries.  At this point, R-devel can still be built using Rtools42
      without changes, but when R-devel is installed via the installer, it
      will by default look for Rtools43.  Pre-release builds of Rtools43 are
      available from  \url{https://www.r-project.org/nosvn/winutf8/ucrt3/}.
    }
  }

  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item \code{USE_FC_LEN_T} is the default: this uses the
      correct (compiler-dependent) prototypes for Fortran BLAS/LAPACK
      routines called from C/C++, and requires adjustment of many such
      calls -- see \sQuote{Writing R Extensions} §6.6.1.

      %% g++ 11 supported c++23.
      %% 2022-09 Recent LLVM (>= 13?) and Apple (>= 13?) clang support c++2b.
      \item There is initial support for C++23 as several compilers are
      now supporting \code{-std=c++23} or \code{-std=c++2b} or similar.
      As for C++20, there no additional \command{configure} checks for
      C++23 features beyond a check that the compiler reports a
      \code{__cplusplus} value greater than that in the C++20 standard.
      C++ feature tests should be used.

      \item [Experimental, in progress]

      There is some support for a package to indicate the version of the
      C standard which should be used to compile it.  There are
      currently two possibilities:
      \describe{
	\item{USE_C17}{Use a standard that is at most C17.  The
	  intention is to allow legacy packages to still be installed when
	  later C standards are preferred.
	}
	\item{USE_C23}{Use C23 (or in future, later).  Compiler/library
	  support for C23 is still being implemented, but LLVM clang 15 and
	  the upcoming GCC 13 have quite extensive support.
	}
      }
      These can be specified as part of the \samp{SystemRequirements}
      field in the package's \file{DESCRIPTION} file or \emph{via} options