@@ -226,6 +226,9 @@
       without changes, but when R-devel is installed via the installer, it
       will by default look for Rtools43.  Pre-release builds of Rtools43 are
       available from  \url{https://www.r-project.org/nosvn/winutf8/ucrt3/}.
+	  
+	  \item Old make targets rsync-extsoft and 32-bit that are no longer 
+	  needed have been removed.
     }
   }
 
